--- a/deployment/api-gateway.yaml
+++ b/deployment/api-gateway.yaml
@@ -15,7 +15,8 @@ spec:
     spec:
       containers:
       - name: api-gateway
-        image: 44ce789b-kr1-registry.container.nhncloud.com/container-platform-registry/api-gateway:latest
+        image: api-gateway:latest
+        imagePullPolicy: Never
         ports:
         - containerPort: 80
       imagePullSecrets:
@@ -27,9 +28,10 @@ metadata:
   name: api-gateway
   namespace: tox-workback
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
     - port: 80
       targetPort: 80
+      nodePort: 31858
   selector:
     app: api-gateway
