--- a/api-gateway/nginx.conf
+++ b/api-gateway/nginx.conf
@@ -1,16 +1,112 @@
-events {}
+events {
+    worker_connections 1024;
+}
 
 http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/log/nginx/access.log  main;
+    error_log   /var/log/nginx/error.log debug;
+
+    sendfile        on;
+    keepalive_timeout  65;
+
+    # Upstream 설정
+    upstream auth_service {
+        server auth-service.tox-workback.svc.cluster.local:8081;
+        keepalive 32;
+    }
+
+    upstream task_service {
+        server task-service.tox-workback.svc.cluster.local:8082;
+        keepalive 32;
+    }
+
     server {
         listen 80;
+        
+        # 기본 타임아웃 설정
+        client_body_timeout 60s;
+        client_header_timeout 60s;
+        keepalive_timeout 75s;
+        send_timeout 60s;
 
+        # auth 서비스
         location /auth/ {
-            proxy_pass http://auth-service:8081/auth/;
+            # CORS 설정
+            add_header 'Access-Control-Allow-Origin' 'http://localhost:5173' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' '*' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            add_header 'Access-Control-Max-Age' 1728000 always;
+
+            if ($request_method = 'OPTIONS') {
+                return 204;
+            }
+
+            proxy_pass http://auth_service;
+            proxy_redirect off;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # 타임아웃 설정
+            proxy_connect_timeout 10s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
+            proxy_buffer_size 128k;
+            proxy_buffers 4 256k;
+            proxy_busy_buffers_size 256k;
+
+            # 에러 처리
+            proxy_next_upstream error timeout http_500 http_502 http_503 http_504;
+            proxy_next_upstream_tries 2;
+            proxy_next_upstream_timeout 10s;
+
+            # 디버깅을 위한 헤더 추가
+            add_header X-Debug-Message "Proxying to auth service" always;
         }
 
+        # task 서비스
         location /tasks/ {
-            proxy_pass http://task-service:8082/tasks/;
-            proxy_set_header Authorization $http_authorization;
+            # CORS 설정
+            add_header 'Access-Control-Allow-Origin' 'http://localhost:5173' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' '*' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            add_header 'Access-Control-Max-Age' 1728000 always;
+
+            if ($request_method = 'OPTIONS') {
+                return 204;
+            }
+
+            proxy_pass http://task_service;
+            proxy_redirect off;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # 타임아웃 설정
+            proxy_connect_timeout 10s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
+            proxy_buffer_size 128k;
+            proxy_buffers 4 256k;
+            proxy_busy_buffers_size 256k;
+
+            # 에러 처리
+            proxy_next_upstream error timeout http_500 http_502 http_503 http_504;
+            proxy_next_upstream_tries 2;
+            proxy_next_upstream_timeout 10s;
         }
     }
 }
