--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.23-alpine
+FROM golang:1.20-alpine
 
 WORKDIR /app
 
@@ -7,6 +7,10 @@ COPY go.sum ./
 RUN go mod download
 
 COPY . .
+
+# 설정 파일을 /app/config 디렉토리로 복사
+RUN mkdir -p /app/config
+COPY config/config.yaml /app/config/
 
 RUN go build -o auth-service ./main.go
 
