--- a/auth-service/config/config.yaml
+++ b/auth-service/config/config.yaml
@@ -1,6 +1,6 @@
-DBHost: "postgres"
+DBHost: "host.docker.internal"
 DBPort: "5432"
 DBUser: "postgres"
-DBPassword: "password"
-DBName: "authdb"
-JWTSecret: "your_secret_key"
+DBPassword: "master"
+DBName: "postgres"
+JWTSecret: ""
