--- a/api-gateway/nginx.conf
+++ b/api-gateway/nginx.conf
@@ -70,6 +70,26 @@ http {
             }
         }
 
+        location /api/profile {
+            proxy_pass http://auth_service;
+
+            # CORS 설정
+            add_header Access-Control-Allow-Origin '*' always;
+            add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS' always;
+            add_header Access-Control-Allow-Headers 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization' always;
+            add_header Access-Control-Max-Age 1728000 always;
+
+            if ($request_method = 'OPTIONS') {
+                add_header Access-Control-Allow-Origin '*';
+                add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS';
+                add_header Access-Control-Allow-Headers 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
+                add_header Access-Control-Max-Age 1728000;
+                add_header Content-Type 'text/plain charset=UTF-8';
+                add_header Content-Length 0;
+                return 204;
+            }
+        }
+
         # task 서비스
         location /api/tasks {
             proxy_pass http://task_service;
