--- a/api-gateway/nginx.conf
+++ b/api-gateway/nginx.conf
@@ -34,15 +34,17 @@ http {
             proxy_pass http://auth_service;
 
             # CORS 설정
-            add_header Access-Control-Allow-Origin '*' always;
+            add_header Access-Control-Allow-Origin 'http://localhost:5173' always;
             add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS' always;
             add_header Access-Control-Allow-Headers 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization' always;
+            add_header Access-Control-Allow-Credentials 'true' always;
             add_header Access-Control-Max-Age 1728000 always;
 
             if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin '*';
+                add_header Access-Control-Allow-Origin 'http://localhost:5173';
                 add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS';
                 add_header Access-Control-Allow-Headers 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
+                add_header Access-Control-Allow-Credentials 'true';
                 add_header Access-Control-Max-Age 1728000;
                 add_header Content-Type 'text/plain charset=UTF-8';
                 add_header Content-Length 0;
@@ -54,15 +56,17 @@ http {
             proxy_pass http://auth_service;
 
             # CORS 설정
-            add_header Access-Control-Allow-Origin '*' always;
+            add_header Access-Control-Allow-Origin 'http://localhost:5173' always;
             add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS' always;
             add_header Access-Control-Allow-Headers 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization' always;
+            add_header Access-Control-Allow-Credentials 'true' always;
             add_header Access-Control-Max-Age 1728000 always;
 
             if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin '*';
+                add_header Access-Control-Allow-Origin 'http://localhost:5173';
                 add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS';
                 add_header Access-Control-Allow-Headers 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
+                add_header Access-Control-Allow-Credentials 'true';
                 add_header Access-Control-Max-Age 1728000;
                 add_header Content-Type 'text/plain charset=UTF-8';
                 add_header Content-Length 0;
@@ -74,15 +78,17 @@ http {
             proxy_pass http://auth_service;
 
             # CORS 설정
-            add_header Access-Control-Allow-Origin '*' always;
+            add_header Access-Control-Allow-Origin 'http://localhost:5173' always;
             add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS' always;
             add_header Access-Control-Allow-Headers 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization' always;
+            add_header Access-Control-Allow-Credentials 'true' always;
             add_header Access-Control-Max-Age 1728000 always;
 
             if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin '*';
+                add_header Access-Control-Allow-Origin 'http://localhost:5173';
                 add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS';
                 add_header Access-Control-Allow-Headers 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
+                add_header Access-Control-Allow-Credentials 'true';
                 add_header Access-Control-Max-Age 1728000;
                 add_header Content-Type 'text/plain charset=UTF-8';
                 add_header Content-Length 0;
@@ -95,15 +101,17 @@ http {
             proxy_pass http://task_service;
 
             # CORS 설정
-            add_header Access-Control-Allow-Origin '*' always;
+            add_header Access-Control-Allow-Origin 'http://localhost:5173' always;
             add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS' always;
             add_header Access-Control-Allow-Headers 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization' always;
+            add_header Access-Control-Allow-Credentials 'true' always;
             add_header Access-Control-Max-Age 1728000 always;
 
             if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin '*';
+                add_header Access-Control-Allow-Origin 'http://localhost:5173';
                 add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS';
                 add_header Access-Control-Allow-Headers 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
+                add_header Access-Control-Allow-Credentials 'true';
                 add_header Access-Control-Max-Age 1728000;
                 add_header Content-Type 'text/plain charset=UTF-8';
                 add_header Content-Length 0;
