--- a/tox-ui/package.json
+++ b/tox-ui/package.json
@@ -17,6 +17,7 @@
     "@mui/x-date-pickers": "^6.18.6",
     "axios": "^1.6.5",
     "date-fns": "^2.30.0",
+    "gantt-task-react": "^0.3.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1"
