--- a/tox-ui/package.json
+++ b/tox-ui/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.15.3",
     "@mui/x-date-pickers": "^6.18.6",
+    "@uiw/react-md-editor": "^4.0.5",
     "axios": "^1.6.5",
     "date-fns": "^2.30.0",
     "gantt-task-react": "^0.3.9",
