--- a/tox-ui/package.json
+++ b/tox-ui/package.json
@@ -21,7 +21,8 @@
     "gantt-task-react": "^0.3.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
